// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-qyyifx-0 WGuGL"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-qyyifx-1 bAIvyW"
    >
      <span
        class="Toggle__HandleInner-qyyifx-2 fdhANN"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render always on 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-qyyifx-0 WGuGL"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-qyyifx-1 bAIvyW"
    >
      <span
        class="Toggle__HandleInner-qyyifx-2 cnqiUH"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render disabled 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-qyyifx-0 WGuGL"
      disabled=""
      type="checkbox"
    />
    <div
      class="Toggle__Handle-qyyifx-1 hTQVlV"
      disabled=""
    >
      <span
        class="Toggle__HandleInner-qyyifx-2 ekQyLn"
        disabled=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should render small 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-qyyifx-0 WGuGL"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-qyyifx-1 jKIwmR"
    >
      <span
        class="Toggle__HandleInner-qyyifx-2 leJubF"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle should toggle checked 1`] = `
<DocumentFragment>
  <label
    class="flex"
  >
    <input
      class="Toggle__Input-qyyifx-0 WGuGL"
      type="checkbox"
    />
    <div
      class="Toggle__Handle-qyyifx-1 bAIvyW"
    >
      <span
        class="Toggle__HandleInner-qyyifx-2 fdhANN"
      />
    </div>
  </label>
</DocumentFragment>
`;
